--- a/src/style.css
+++ b/src/style.css
@@ -678,6 +678,7 @@ img {
   }
   .slideshow-container {
     flex-direction: column;
+    align-items: center;
     margin: 0;
     padding-bottom: 4rem;
     gap: 2rem;
