--- a/src/style.scss
+++ b/src/style.scss
@@ -667,6 +667,7 @@ img {
 
     .slideshow-container {
         flex-direction: column;
+
         margin: 0;
         padding-bottom: 4rem;
         gap: 2rem;
@@ -714,6 +715,7 @@ img {
     
       .slideshow-container {
         flex-direction: column;
+        align-items: center;
         margin: 0;
         padding-bottom: 4rem;
         gap: 2rem;
