--- a/src/style.css
+++ b/src/style.css
@@ -64,7 +64,6 @@ img {
 .image {
   width: 100%;
   display: block;
-  cursor: pointer;
   transition: opacity 1.5s;
   padding-bottom: 2.3rem;
   -webkit-animation: appear 1.5s forwards ease-in;
@@ -77,12 +76,42 @@ img {
 .image-container {
   position: relative;
   display: flex;
+  cursor: pointer;
+}
+
+.checklist {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-right: auto;
+  font-size: 1rem;
+}
+
+.selected {
+  position: relative;
+}
+
+.selected:after {
+  content: "";
+  position: absolute;
+  bottom: -0.525rem;
+  left: -0.5rem;
+  right: -0.5rem;
+  height: 0.75rem;
+  z-index: 0;
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/664131/underline.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .image-container__image {
   width: 32rem;
   display: flex;
   position: relative;
+}
+.image-container__image img {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .caption {
@@ -100,6 +129,15 @@ img {
   opacity: 0.8;
 }
 
+.caption.board-name {
+  background-color: rgba(0, 0, 0, 0.2);
+  font-weight: 700;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  padding: 1rem;
+  padding-left: 2rem;
+}
+
 .img {
   max-width: 100%;
   max-height: 100%;
@@ -107,7 +145,9 @@ img {
      object-fit: cover;
   position: relative;
   flex: 1;
-  filter: brightness(74%);
+}
+.img:hover {
+  filter: brightness(60%);
 }
 
 .wrapper {
@@ -180,7 +220,6 @@ img {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
   padding: 6rem 3rem;
   gap: 25%;
   margin-bottom: 6rem;
@@ -217,6 +256,10 @@ img {
 }
 .slideshow-container .image-container__caption p {
   font-size: 1rem;
+}
+
+.slideshow-container.center {
+  justify-content: center;
 }
 
 .progress-container {
@@ -330,6 +373,10 @@ img {
   max-height: 90%;
   max-width: 90%;
 }
+.zoom-image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 
 .close {
   position: absolute;
@@ -382,16 +429,16 @@ img {
   align-items: center;
   gap: 1rem;
 }
-.modal label {
-  margin-right: auto;
-  font-size: 0.8rem;
-}
 .modal input {
   width: 100%;
-  padding: 1rem;
+  padding: 0.8rem;
   border-radius: 15px;
   font-size: 1.1rem;
   border: 1px rgba(0, 0, 0, 0.3) solid;
+}
+.modal textarea {
+  min-height: 3rem;
+  resize: none;
 }
 .modal button {
   padding: 1rem;
@@ -412,6 +459,15 @@ img {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.flex div:last-child {
+  flex-basis: 20%;
 }
 
 .board-pins {
@@ -468,13 +524,13 @@ img {
   display: flex;
   flex-wrap: wrap;
   border-radius: 15px;
+  overflow: hidden;
 }
 .cardContainer .card .thumbnails img {
   width: 50%;
   height: 50%;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 15px;
 }
 .cardContainer .card:hover {
   background-color: rgba(195, 207, 207, 0.5);
