--- a/src/style.scss
+++ b/src/style.scss
@@ -68,26 +68,54 @@ img {
 .image {
     width: 100%;
     display: block;
-    cursor: pointer;
+  
 
     transition: opacity 1.5s;
     padding-bottom: 2.3rem;
     animation: appear 1.5s forwards ease-in;
     &:hover {
         opacity: .8;
+     
     }
 }
 
 .image-container {
     position: relative;
     display: flex;
-
+    cursor: pointer;
 }
+.checklist {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+        margin-right: auto;
+        font-size: 1rem;
+    
+}
+.selected {
+    position: relative;
+ 
+  }
+  .selected:after {
+      content: '';
+      position: absolute;
+      bottom: -0.525rem;
+      left: -0.5rem;
+      right: -0.5rem;
+      height: 0.75rem;
+      z-index: 0;
+      background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/664131/underline.svg');
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 
 .image-container__image {
     width: 32rem;
     display: flex;
     position: relative;
+    img {
+        object-fit: cover;
+    }
 }
 
 .caption {
@@ -105,14 +133,25 @@ img {
         opacity: .8;
     }
 }
-
+.caption.board-name {
+    background-color: rgba(0, 0, 0, .2);
+    font-weight: 700;
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+    padding: 1rem;
+    padding-left: 2rem;
+ 
+}
 .img {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
     position: relative;
     flex: 1;
-    filter: brightness(74%)
+  
+    &:hover{
+        filter: brightness(60%)
+    }
 }
 .wrapper{
     height:1.5rem;
@@ -186,7 +225,7 @@ img {
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+   
     padding: 6rem 3rem;
     gap: 25%;
     margin-bottom: 6rem;
@@ -229,7 +268,10 @@ img {
         }
     }
 }
+.slideshow-container.center {
+    justify-content: center;
 
+}
 .progress-container {
     width: 100%;
     display: flex;
@@ -346,6 +388,9 @@ img {
     position: relative;
     max-height: 90%;
     max-width: 90%;
+    img {
+        object-fit: cover;
+    }
 }
 
 .close {
@@ -398,16 +443,17 @@ img {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    label {
-        margin-right: auto;
-        font-size: .8rem;
-    }
+    
     input {
         width: 100%;
-        padding: 1rem;
+        padding: .8rem;
         border-radius: 15px;
         font-size: 1.1rem;
         border: 1px rgba(0, 0, 0,.3) solid;
+    }
+    textarea {
+        min-height: 3rem;
+        resize: none;
     }
     button {
         padding: 1rem;
@@ -430,6 +476,14 @@ img {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+.flex {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+   div:last-child {
+    flex-basis: 20%;
+   }
 }
 .board-pins {
     display: flex;
@@ -482,11 +536,12 @@ img {
             display: flex;
             flex-wrap: wrap;
             border-radius: 15px;
+            overflow: hidden;
             img {
                 width: 50%;
                 height: 50%;
                 object-fit: cover;
-                border-radius: 15px;
+              
             }
         }
         &:hover {
