--- a/src/style.scss
+++ b/src/style.scss
@@ -27,11 +27,11 @@ header {
     align-items: center;
     justify-content: space-between;
     margin: 0 3rem;
-    padding: 2rem 0;
+    padding: 1rem 0;
     border-bottom: 1px $light-gray solid;
     opacity: 0;
     animation: appear .5s forwards ease-in;
-
+    height: 10%;
     a {
         font-size: .8rem;
         text-decoration: none;
@@ -110,11 +110,11 @@ img {
     }
 
 .image-container__image {
-    width: 32rem;
+    width: 30rem;
     display: flex;
     position: relative;
     img {
-        object-fit: cover;
+        object-fit: contain;
     }
 }
 
@@ -221,14 +221,19 @@ img {
 .trash.show {
     display: block;
 }
+.slideshow {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+}
 .slideshow-container {
     width: 100%;
     height: 100%;
     display: flex;
-   
+    justify-content: center;
     padding: 6rem 3rem;
     gap: 25%;
-    margin-bottom: 6rem;
+    
     opacity: 0;
     animation: appear .5s forwards ease-in;
     transition: all 5s;
@@ -268,9 +273,16 @@ img {
         }
     }
 }
+.page {
+    display: flex ;
+    flex-direction: column;
+    height: 100vh;
+    position: relative;
+}
 .slideshow-container.center {
     justify-content: center;
-
+    padding: 0;
+    padding-bottom: 0  ;
 }
 .progress-container {
     width: 100%;
@@ -279,7 +291,7 @@ img {
     align-items: center;
     padding: 1.5rem 3rem;
     position: relative;
-
+    height: 10%;
     .progress {
         flex: 10;
         position: absolute;
@@ -600,6 +612,7 @@ img {
     }
 
     .slideshow-container {
+        justify-content: center;
         padding: 0;
         flex-direction: column;
         gap: 0rem;
@@ -702,6 +715,7 @@ img {
     header {
         margin: 0;
         padding: 1rem 1.5rem;
+        height: 10%;
 
         a {
             font-size: .5rem;
@@ -771,6 +785,7 @@ img {
       .slideshow-container {
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         margin: 0;
         padding-bottom: 4rem;
         gap: 2rem;
