--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,6 @@ img {
 .image-container {
   position: relative;
   display: flex;
-  cursor: pointer;
 }
 
 .checklist {
@@ -106,9 +105,9 @@ img {
 }
 
 .image-container__image {
+  position: relative;
   width: 30rem;
   display: flex;
-  position: relative;
 }
 .image-container__image img {
   -o-object-fit: contain;
@@ -220,17 +219,16 @@ img {
 .slideshow {
   height: 80%;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   padding: 1rem;
 }
 
 .slideshow-container {
   width: 100%;
-  height: 100%;
   display: flex;
-  justify-content: center;
-  padding: 6rem 3rem;
   gap: 25%;
+  padding: 0 2rem;
   opacity: 0;
   -webkit-animation: appear 0.5s forwards ease-in;
           animation: appear 0.5s forwards ease-in;
@@ -244,7 +242,7 @@ img {
   padding-top: 0;
   position: relative;
   color: black;
-  bottom: 0;
+  top: 0;
 }
 .slideshow-container .image-container__caption .text {
   background-color: white;
@@ -252,15 +250,15 @@ img {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  left: -4.2rem;
-  padding: 4rem;
+  left: -8rem;
+  padding: 3rem;
   padding-top: 0;
-  padding-bottom: 3rem;
+  word-break: break-word;
   padding-right: 0;
 }
 .slideshow-container .image-container__caption h2 {
   min-width: 22rem;
-  font-size: 3.2rem;
+  font-size: 2.8rem;
 }
 .slideshow-container .image-container__caption p {
   font-size: 1rem;
@@ -278,11 +276,19 @@ img {
   padding: 0;
   padding-bottom: 0;
 }
+.slideshow-container.center .image-container__image {
+  width: 30rem;
+  display: flex;
+}
+.slideshow-container.center .image-container__image img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
 
 .progress-container {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   padding: 1.5rem 3rem;
   position: relative;
@@ -323,6 +329,10 @@ img {
   display: flex;
   gap: 0.5rem;
   color: #7D7D7D;
+}
+
+.progress-container.center {
+  justify-content: flex-end;
 }
 
 .masonry {
@@ -368,7 +378,7 @@ img {
   align-items: center;
   gap: 1rem;
   left: 5%;
-  bottom: 5%;
+  bottom: 11%;
   cursor: pointer;
 }
 .view-image img {
@@ -430,7 +440,7 @@ img {
   display: flex;
   position: absolute;
   bottom: -10%;
-  margin-left: 1.5rem;
+  left: -2rem;
 }
 
 .description {
@@ -771,11 +781,13 @@ img {
   }
   .slideshow-container {
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     margin: 0;
     padding-bottom: 4rem;
     gap: 2rem;
+  }
+  .slideshow-container.center .image-container {
+    justify-content: center;
   }
   .image-container__caption .text {
     left: -16rem;
