--- a/src/style.scss
+++ b/src/style.scss
@@ -82,7 +82,7 @@ img {
 .image-container {
     position: relative;
     display: flex;
-    cursor: pointer;
+ 
 }
 .checklist {
     display: flex;
@@ -110,9 +110,10 @@ img {
     }
 
 .image-container__image {
+    position: relative;
     width: 30rem;
     display: flex;
-    position: relative;
+    
     img {
         object-fit: contain;
     }
@@ -224,17 +225,19 @@ img {
 .slideshow {
     height: 80%;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     padding: 1rem;
+
 }
 .slideshow-container {
     width: 100%;
-    height: 100%;
+
     display: flex;
-    justify-content: center;
-    padding: 6rem 3rem;
+
+ 
     gap: 25%;
-    
+    padding: 0 2rem;
     opacity: 0;
     animation: appear .5s forwards ease-in;
     transition: all 5s;
@@ -248,7 +251,8 @@ img {
         padding-top: 0;
         position: relative;
         color: black;
-        bottom: 0;
+ top: 0;
+ 
 
         .text {
             background-color: white;
@@ -256,17 +260,17 @@ img {
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            left: -4.2rem;
-            padding: 4rem;
+            left: -8rem;
+            padding: 3rem;
             padding-top: 0;
-
-            padding-bottom: 3rem;
+            
+            word-break: break-word;
             padding-right: 0;
         }
 
         h2 {
             min-width: 22rem;
-            font-size: 3.2rem
+            font-size: 2.8rem
         }
 
         p {
@@ -284,11 +288,19 @@ img {
     justify-content: center;
     padding: 0;
     padding-bottom: 0  ;
+    .image-container__image {
+        width: 30rem;
+        display: flex;
+        
+        img {
+            object-fit: contain;
+        }
+    }
 }
 .progress-container {
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     padding: 1.5rem 3rem;
     position: relative;
@@ -331,7 +343,9 @@ img {
         color: #7D7D7D;
     }
 }
-
+.progress-container.center {
+    justify-content: flex-end;
+}
 .masonry {
     columns: auto 4;
     padding: 2.5rem;
@@ -375,7 +389,7 @@ img {
     align-items: center;
     gap: 1rem;
     left: 5%;
-    bottom: 5%;
+    bottom: 11%;
     cursor: pointer;
 
     img {
@@ -441,7 +455,7 @@ img {
     display: flex;
     position: absolute;
     bottom: -10%;
-    margin-left: 1.5rem;
+    left: -2rem;
 }
 
 .description {
@@ -802,12 +816,18 @@ img {
     
       .slideshow-container {
         flex-direction: column;
-        align-items: center;
+ 
         justify-content: center;
         margin: 0;
         padding-bottom: 4rem;
         gap: 2rem;
       }
+      .slideshow-container.center {
+        .image-container {
+            justify-content: center;
+          }
+      }
+      
       .image-container__caption  {
         .text {
             left: -16rem;
