--- a/src/style.css
+++ b/src/style.css
@@ -733,16 +733,25 @@ img {
   }
 }
 @media (min-width: 769px) and (max-width: 1000px) {
+  .page {
+    height: 100%;
+  }
   .masonry {
     -moz-columns: auto 2;
          columns: auto 2;
     padding: 2rem;
   }
+  .slideshow {
+    height: unset;
+  }
   .slideshow-container {
     flex-direction: column;
+    padding-top: 2rem;
     margin: 0;
-    padding-bottom: 4rem;
     gap: 2rem;
+  }
+  .slideshow-container.center {
+    align-items: center;
   }
   .image-container__caption .text {
     left: -16rem;
@@ -750,21 +759,23 @@ img {
   }
   .image-container__caption h2 {
     font-weight: 700;
-    font-size: 3.6rem;
+    font-size: 3rem;
     min-width: 25rem;
   }
   .artist {
     width: 10wrem;
-    bottom: 43%;
+    bottom: 34%;
   }
   .description {
+    padding-top: 8rem;
+    padding-bottom: 2rem;
     padding-left: 8rem;
     font-weight: 700;
     gap: 3rem;
   }
   header {
     margin: 0;
-    padding: 2rem 2.5rem;
+    padding: 1.5rem 2.5rem;
   }
   header a {
     font-size: 1.2rem;
@@ -778,6 +789,9 @@ img {
     -moz-columns: auto 3;
          columns: auto 3;
     padding: 2rem;
+  }
+  .slideshow {
+    height: unset;
   }
   .slideshow-container {
     flex-direction: column;
