--- a/src/style.css
+++ b/src/style.css
@@ -472,8 +472,7 @@ img {
 }
 
 .modal {
-  width: 30rem;
-  min-height: 20rem;
+  width: 40rem;
   padding: 2rem;
   background-color: white;
   border-radius: 15px;
@@ -509,9 +508,20 @@ img {
 
 .links {
   width: 100%;
+  height: 25rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  overflow-y: scroll;
+}
+.links li h1 {
+  cursor: pointer;
+}
+.links li form {
+  display: none;
+}
+.links li form.show {
+  display: block;
 }
 
 .flex {
