--- a/src/style.scss
+++ b/src/style.scss
@@ -485,8 +485,8 @@ img {
     font-weight: 700;
 }
 .modal {
-    width: 30rem;
-    min-height: 20rem;
+    width: 40rem;
+   
     padding: 2rem ;
     background-color: white;
     border-radius: 15px;
@@ -494,7 +494,7 @@ img {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    
+   
     input {
         width: 100%;
         padding: .8rem;
@@ -524,9 +524,21 @@ img {
 }
 .links {
     width: 100%;
+    height: 25rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow-y: scroll;
+    li h1 {
+        cursor: pointer;
+    }
+    li form{
+        display: none;
+
+    }
+    li form.show {
+        display: block;
+    }
 }
 .flex {
     display: flex;
