--- a/src/style.css
+++ b/src/style.css
@@ -472,7 +472,7 @@ img {
 }
 
 .modal {
-  width: 40rem;
+  width: 45rem;
   padding: 2rem;
   background-color: white;
   border-radius: 15px;
@@ -508,20 +508,34 @@ img {
 
 .links {
   width: 100%;
-  height: 25rem;
+  height: 30rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   overflow-y: scroll;
 }
+.links li {
+  word-wrap: break-word;
+}
 .links li h1 {
   cursor: pointer;
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  font-size: 1rem;
+  word-wrap: break-word;
+  width: 100%;
 }
 .links li form {
   display: none;
 }
 .links li form.show {
   display: block;
+}
+
+.buttons {
+  display: flex;
+  gap: 1rem;
 }
 
 .flex {
