--- a/src/style.scss
+++ b/src/style.scss
@@ -485,7 +485,7 @@ img {
     font-weight: 700;
 }
 .modal {
-    width: 40rem;
+    width: 45rem;
    
     padding: 2rem ;
     background-color: white;
@@ -524,13 +524,27 @@ img {
 }
 .links {
     width: 100%;
-    height: 25rem;
+    height: 30rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     overflow-y: scroll;
+    li {
+        word-wrap: break-word;
+    }
     li h1 {
         cursor: pointer;
+        display: flex;
+        align-items: flex-start;
+        gap: 1rem;
+        font-size: 1rem;
+        word-wrap: break-word;
+        width: 100%;
+        .title {
+           
+            
+           
+        }
     }
     li form{
         display: none;
@@ -539,6 +553,10 @@ img {
     li form.show {
         display: block;
     }
+}
+.buttons {
+    display: flex;
+    gap: 1rem;
 }
 .flex {
     display: flex;
