--- a/src/style.css
+++ b/src/style.css
@@ -513,6 +513,7 @@ img {
   flex-direction: column;
   gap: 1rem;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 .links li {
   word-wrap: break-word;
