--- a/src/style.scss
+++ b/src/style.scss
@@ -529,8 +529,10 @@ img {
     flex-direction: column;
     gap: 1rem;
     overflow-y: scroll;
+    overflow-x: hidden;
     li {
         word-wrap: break-word;
+    
     }
     li h1 {
         cursor: pointer;
@@ -540,11 +542,7 @@ img {
         font-size: 1rem;
         word-wrap: break-word;
         width: 100%;
-        .title {
-           
-            
-           
-        }
+      
     }
     li form{
         display: none;
