--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,8 @@ img {
 .image-container {
   position: relative;
   display: flex;
+  cursor: pointer;
+  height: 100%;
 }
 
 .checklist {
@@ -106,7 +108,7 @@ img {
 
 .image-container__image {
   position: relative;
-  width: 30rem;
+  min-width: 25rem;
   display: flex;
 }
 .image-container__image img {
@@ -147,6 +149,10 @@ img {
   flex: 1;
 }
 .img:hover {
+  filter: brightness(60%);
+}
+
+.img.dimmed {
   filter: brightness(60%);
 }
 
@@ -226,6 +232,7 @@ img {
 
 .slideshow-container {
   width: 100%;
+  height: 90%;
   display: flex;
   gap: 25%;
   padding: 0 2rem;
@@ -269,6 +276,7 @@ img {
   flex-direction: column;
   height: 100vh;
   position: relative;
+  overflow-x: hidden;
 }
 
 .slideshow-container-center {
@@ -454,7 +462,6 @@ img {
 .description {
   position: relative;
   padding-top: 8rem;
-  padding-right: 5rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -469,6 +476,10 @@ img {
   z-index: -1;
   color: #F3F3F3;
   font-weight: 700;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .modal {
@@ -515,8 +526,22 @@ img {
   overflow-y: scroll;
   overflow-x: hidden;
 }
+.links input, .links textarea {
+  border: none;
+  border-bottom: 1px #324047 solid;
+  border-radius: unset;
+}
+.links input:focus, .links textarea:focus {
+  outline: none;
+  border: none;
+  border-bottom: 1px #324047 solid;
+  background-color: rgba(250, 235, 215, 0.3);
+}
 .links li {
   word-wrap: break-word;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .links li h1 {
   cursor: pointer;
@@ -526,6 +551,10 @@ img {
   font-size: 1rem;
   word-wrap: break-word;
   width: 100%;
+  padding: 0.5rem 0;
+}
+.links li h1:hover {
+  background-color: rgba(252, 215, 131, 0.5);
 }
 .links li form {
   display: none;
@@ -555,7 +584,7 @@ img {
   padding-top: 1rem;
 }
 .board-pins h2 {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 .addButton {
