--- a/src/style.scss
+++ b/src/style.scss
@@ -537,6 +537,22 @@ img {
     gap: 1rem;
     overflow-y: scroll;
     overflow-x: hidden;
+    &::-webkit-scrollbar-track
+    {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        background-color: #F5F5F5;
+    }
+    
+    &::-webkit-scrollbar
+    {
+        width: 4px;
+        background-color: #F5F5F5;
+    }
+    
+    &::-webkit-scrollbar-thumb
+    {
+        background-color: #000000;
+    }
     input, textarea {
         border: none;
         border-bottom: 1px #324047 solid;
