refactored gallery code

--- a/src/style.scss
+++ b/src/style.scss
@@ -113,6 +113,7 @@ img {
 .image-container__image {
     position: relative;
     min-width: 25rem;
+    max-width: 40rem;
     display: flex;
     
     img {
