--- a/src/style.css
+++ b/src/style.css
@@ -109,6 +109,7 @@ img {
 .image-container__image {
   position: relative;
   min-width: 25rem;
+  max-width: 40rem;
   display: flex;
 }
 .image-container__image img {
