--- a/src/style.scss
+++ b/src/style.scss
@@ -293,6 +293,7 @@ img {
 }
 .slideshow-container-center {
     width: 100%;
+    height: 100%;
     display: flex;
     gap: 25%;
     padding: 0 2rem;
@@ -305,7 +306,7 @@ img {
     .image-container__image {
         width: 30rem;
         display: flex;
-        
+        justify-content: center;
         img {
             object-fit: cover;
         }
@@ -493,7 +494,7 @@ img {
     user-select: none;
 }
 .modal {
-    width: 45rem;
+    width: 35rem;
    
     padding: 2rem ;
     background-color: white;
@@ -641,6 +642,11 @@ img {
     flex-direction: column;
     gap:1rem;
     position: relative;
+    .boardName {
+        width: 15rem;
+        word-break: break-word;
+  
+    }
     .card {
         width: 18rem;
         height: 15rem;
@@ -648,6 +654,7 @@ img {
         cursor: pointer;
         border-radius: 15px ;
         position: relative;
+       
         .thumbnails {
             width: 100%;
             height: 100%;
@@ -678,7 +685,7 @@ img {
 .container {
     padding: 2.5rem;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     gap: 2rem;
 }
