--- a/src/style.css
+++ b/src/style.css
@@ -612,6 +612,7 @@ img {
   margin-right: auto;
   bottom: 5%;
   cursor: pointer;
+  left: 50%;
 }
 
 .input {
@@ -625,6 +626,7 @@ img {
 .cardContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
   position: relative;
 }
@@ -671,6 +673,8 @@ img {
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 2rem;
+  height: 90%;
+  position: relative;
 }
 
 .plus {
