--- a/src/style.scss
+++ b/src/style.scss
@@ -627,6 +627,7 @@ img {
     margin-right: auto;
     bottom: 5%;
     cursor: pointer;
+    left: 50%;
 }
 .input {
 
@@ -640,6 +641,7 @@ img {
 .cardContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap:1rem;
     position: relative;
     .boardName {
@@ -688,6 +690,8 @@ img {
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 2rem;
+    height: 90%;
+    position: relative;
 }
 .plus {
     width: 3rem;
