--- a/src/style.scss
+++ b/src/style.scss
@@ -614,6 +614,7 @@ img {
     padding-top: 1rem;
     h2 {
         font-size: 1.8rem;
+        text-align: center;
     }
 }
 .addButtonContainer {
