--- a/src/style.css
+++ b/src/style.css
@@ -210,6 +210,10 @@ img {
   right: 2%;
   top: 2%;
   z-index: 250;
+  background-color: #F5F5F5;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
   cursor: pointer;
 }
 .trash img {
@@ -220,7 +224,7 @@ img {
 }
 
 .trash.show {
-  display: block;
+  display: flex;
 }
 
 .slideshow {
@@ -641,6 +645,24 @@ img {
   align-items: center;
   gap: 1rem;
   position: relative;
+}
+.cardContainer .settings {
+  background-color: white;
+  position: absolute;
+  right: 0;
+  top: 3rem;
+  z-index: 5;
+  display: none;
+  flex-direction: column;
+}
+.cardContainer .settings li {
+  padding: 1rem 2rem;
+}
+.cardContainer .settings li:hover {
+  background-color: #7D7D7D;
+}
+.cardContainer .settings.show {
+  display: flex;
 }
 .cardContainer .boardName {
   width: 15rem;
