--- a/src/style.css
+++ b/src/style.css
@@ -210,7 +210,6 @@ img {
   right: 2%;
   top: 2%;
   z-index: 250;
-  background-color: #F5F5F5;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
@@ -224,6 +223,31 @@ img {
 }
 
 .trash.show {
+  display: flex;
+}
+
+.settings {
+  display: none;
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  right: 2%;
+  top: 2%;
+  z-index: 2;
+  background-color: #F5F5F5;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.settings img {
+  max-width: 100%;
+  max-height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.settings.show {
   display: flex;
 }
 
@@ -603,7 +627,6 @@ img {
 }
 .board-pins h2 {
   font-size: 1.8rem;
-  text-align: center;
 }
 
 .addButtonContainer {
@@ -646,7 +669,7 @@ img {
   gap: 1rem;
   position: relative;
 }
-.cardContainer .settings {
+.cardContainer .settingsPopup {
   background-color: white;
   position: absolute;
   right: 0;
@@ -655,13 +678,13 @@ img {
   display: none;
   flex-direction: column;
 }
-.cardContainer .settings li {
+.cardContainer .settingsPopup li {
   padding: 1rem 2rem;
 }
-.cardContainer .settings li:hover {
+.cardContainer .settingsPopup li:hover {
   background-color: #7D7D7D;
 }
-.cardContainer .settings.show {
+.cardContainer .settingsPopup.show {
   display: flex;
 }
 .cardContainer .boardName {
@@ -699,6 +722,25 @@ img {
 .cardContainer span {
   font-size: 1.5rem;
   font-weight: bold;
+}
+
+.image-container .settingsPopup {
+  background-color: white;
+  position: absolute;
+  right: 0;
+  top: 3rem;
+  z-index: 10;
+  display: none;
+  flex-direction: column;
+}
+.image-container .settingsPopup li {
+  padding: 1rem 2rem;
+}
+.image-container .settingsPopup li:hover {
+  background-color: #7D7D7D;
+}
+.image-container .settingsPopup.show {
+  display: flex;
 }
 
 .container {
