--- a/src/style.css
+++ b/src/style.css
@@ -821,6 +821,9 @@ img {
   .page {
     height: 100%;
   }
+  .page.single {
+    height: 100vh;
+  }
   .changePerSlide span {
     display: none;
   }
