fixed css progress bar

--- a/src/style.scss
+++ b/src/style.scss
@@ -346,6 +346,7 @@ img {
     position: relative;
     height: 10%;
     gap: 2rem;
+    background-color: white;
     .progress {
         flex: 10;
         position: absolute;
