--- a/src/style.css
+++ b/src/style.css
@@ -157,6 +157,13 @@ img {
   filter: brightness(60%);
 }
 
+.modal .addMoreLinks {
+  margin-right: auto;
+  border: none;
+  padding: 0;
+  text-decoration: underline;
+}
+
 .wrapper {
   height: 1.5rem;
   width: 4rem;
@@ -164,7 +171,7 @@ img {
   position: relative;
   cursor: pointer;
   overflow: hidden;
-  border: 1px black solid;
+  border: 1px #7D7D7D solid;
 }
 
 #checkbox {
@@ -341,6 +348,7 @@ img {
   position: relative;
   height: 10%;
   gap: 2rem;
+  background-color: white;
 }
 .progress-container .progress {
   flex: 10;
@@ -515,13 +523,19 @@ img {
 
 .modal {
   width: 35rem;
+  max-height: 85%;
   padding: 2rem;
   background-color: white;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 0.8rem;
+  font-family: "Libre Baskerville", serif;
+}
+.modal label {
+  margin-right: auto;
+  font-size: 0.8rem;
 }
 .modal input {
   width: 100%;
@@ -530,20 +544,25 @@ img {
   font-size: 1.1rem;
   border: 1px rgba(0, 0, 0, 0.3) solid;
 }
+.modal input:focus {
+  outline: #7D7D7D;
+}
 .modal textarea {
   min-height: 3rem;
   resize: none;
 }
 .modal button {
-  padding: 1rem;
-  border-radius: 25px;
-  background-color: rgb(80, 41, 41);
-  color: white;
+  padding: 1rem 2rem;
+  background-color: white;
+  color: black;
+  border: 0.5px #7D7D7D solid;
   outline: none;
-  border: none;
+  border-radius: 15px;
   cursor: pointer;
 }
 .modal button:disabled {
+  color: rgb(139, 139, 139);
+  border: 0.5px transparent solid;
   background-color: rgb(220, 220, 220);
   cursor: not-allowed;
 }
@@ -553,7 +572,6 @@ img {
   height: 30rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -588,15 +606,18 @@ img {
 .links li h1 {
   cursor: pointer;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 1rem;
   font-size: 1rem;
   word-wrap: break-word;
   width: 100%;
-  padding: 0.5rem 0;
+  padding: 0;
 }
-.links li h1:hover {
-  background-color: rgba(252, 215, 131, 0.5);
+.links li h1 input {
+  border: none;
+}
+.links li h1 input:focus {
+  background-color: transparent;
 }
 .links li form {
   display: none;
@@ -606,14 +627,26 @@ img {
 }
 
 .buttons {
+  width: 100%;
   display: flex;
+  flex-direction: column;
   gap: 1rem;
+  margin-top: 2rem;
+}
+.buttons button:last-child {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .flex {
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+.flex div {
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
 }
 .flex div:last-child {
   flex-basis: 20%;
@@ -652,6 +685,7 @@ img {
   outline: none;
   border: none;
   background: transparent;
+  cursor: pointer;
 }
 
 .input {
