--- a/src/style.scss
+++ b/src/style.scss
@@ -159,6 +159,12 @@ img {
 .img.dimmed {
     filter: brightness(60%)
 }
+.modal .addMoreLinks {
+    margin-right: auto;
+    border: none;
+    padding: 0;
+    text-decoration: underline;
+}
 .wrapper{
     height:1.5rem;
     width:4rem;
@@ -166,7 +172,7 @@ img {
     position: relative;
     cursor:pointer;
     overflow:hidden;
-    border: 1px black solid;
+    border: 1px #7D7D7D solid;
   }
   
   #checkbox{
@@ -521,35 +527,45 @@ img {
 }
 .modal {
     width: 35rem;
-   
+    max-height: 85%;
     padding: 2rem ;
     background-color: white;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
-   
+    gap: .8rem;
+    font-family: 'Libre Baskerville', serif;
+   label {
+    margin-right: auto;
+    font-size: .8rem;
+   }
     input {
         width: 100%;
         padding: .8rem;
         border-radius: 15px;
         font-size: 1.1rem;
         border: 1px rgba(0, 0, 0,.3) solid;
+        &:focus {
+            outline: #7D7D7D;
+        }
     }
     textarea {
         min-height: 3rem;
         resize: none;
     }
     button {
-        padding: 1rem;
-        border-radius: 25px;
-        background-color: rgb(80, 41, 41);
-        color: white;
+        padding: 1rem 2rem;
+      
+        background-color: white;
+        color: black;
+        border: .5px #7D7D7D solid;
         outline: none;
-        border: none;
+        border-radius: 15px;
         cursor: pointer;
         &:disabled {
+            color: rgb(139, 139, 139);;
+            border: .5px transparent solid;
             background-color: rgb(220, 220, 220);
             cursor:not-allowed;
            
@@ -561,8 +577,9 @@ img {
     width: 100%;
     height: 30rem;
     display: flex;
+   
     flex-direction: column;
-    gap: 1rem;
+ 
     overflow-y: scroll;
     overflow-x: hidden;
     &::-webkit-scrollbar-track
@@ -602,16 +619,19 @@ img {
     li h1 {
         cursor: pointer;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         gap: 1rem;
         font-size: 1rem;
         word-wrap: break-word;
         width: 100%;
-        padding: .5rem 0;
-      &:hover {
-        background-color: rgba(252, 215, 131,0.5);
-
-      }
+        padding: 0;
+      
+        input {
+            border: none;
+            &:focus {
+                background-color: transparent;
+            }
+        }
     }
     li form{
         display: none;
@@ -622,13 +642,24 @@ img {
     }
 }
 .buttons {
+    width: 100%;
     display: flex;
+    flex-direction: column;
     gap: 1rem;
+    margin-top: 2rem;
+    button:last-child {
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 .flex {
     display: flex;
     align-items: center;
     gap: 1rem;
+   
+    div {
+        width: min-content;
+    }
    div:last-child {
     flex-basis: 20%;
    }
@@ -665,6 +696,7 @@ img {
     outline: none;
     border: none;
     background: transparent;
+    cursor: pointer;
     
 }
 .input {
