--- a/src/style.scss
+++ b/src/style.scss
@@ -388,6 +388,7 @@ img {
         display: flex;
         gap: .5rem;
         color: #7D7D7D;
+        width: 100%;
     }
 }
 .progress-container-center {
@@ -416,7 +417,9 @@ img {
 .controls {
     display: flex;
     gap: 2rem;
-
+    .button {
+        padding: 0;
+    }
     img {
         width: 1.7rem;
         height: 1.7rem;
@@ -799,6 +802,7 @@ img {
 }
 .container {
     padding: 2.5rem;
+    padding-bottom: 3rem;
     display: flex;
     align-items: flex-start;
     flex-wrap: wrap;
