if pictures length more than 1, slideshow not working

--- a/src/style.scss
+++ b/src/style.scss
@@ -20,7 +20,7 @@ li {
 p {
     color: $gray;
 }
-.signup .google-auth-button .S9gUrf-YoZ4jf, .S9gUrf-YoZ4jf *{
+.google-auth-button{
     font-size: .8rem;
     text-decoration: none;
     color: $gray;
