--- a/src/style.css
+++ b/src/style.css
@@ -19,14 +19,14 @@ p {
   color: #7D7D7D;
 }
 
-.signup .google-auth-button .S9gUrf-YoZ4jf, .S9gUrf-YoZ4jf * {
+.google-auth-button {
   font-size: 0.8rem;
   text-decoration: none;
   color: #7D7D7D;
   letter-spacing: 2px !important;
   cursor: pointer;
 }
-.signup .google-auth-button .S9gUrf-YoZ4jf:hover, .S9gUrf-YoZ4jf *:hover {
+.google-auth-button:hover {
   color: black;
 }
 
