--- a/src/style.scss
+++ b/src/style.scss
@@ -735,6 +735,7 @@ img {
     align-items: center;
     gap:1rem;
     position: relative;
+   
     .settingsPopup {
         background-color: white;
         
@@ -768,7 +769,9 @@ img {
         cursor: pointer;
         border-radius: 15px ;
         position: relative;
-       
+        &:hover {
+            filter: brightness(80%);
+        }
         .thumbnails {
             width: 100%;
             height: 100%;
