updated post validation backend

--- a/src/style.scss
+++ b/src/style.scss
@@ -495,9 +495,9 @@ img {
     display: flex;
     position: relative;
     max-height: 90%;
-    max-width: 90%;
+    max-width: 40%;
     img {
-        object-fit: contain;
+        object-fit: cover;
     }
 }
 
@@ -563,13 +563,15 @@ img {
         border-radius: 15px;
         font-size: 1.1rem;
         border: 1px rgba(0, 0, 0,.3) solid;
+        margin-bottom: 5px;
         &:focus {
             outline: #7D7D7D;
         }
     }
     textarea {
-        min-height: 3rem;
+        min-height: 4rem;
         resize: none;
+        margin-bottom: 5px;
     }
     button {
         padding: 1rem 2rem;
